# FileStaticAnalyzerLocalTools

./: .gitignore  README.md  pyproject.toml
src/fsalt/utility/hashes/: CRC32Engine.py  HashEngineBase.py  MD5Engine.py  MultipleHashBulkEngine.py  SHA1Engine.py  SHA256Engine.py  SSDeepEngine.py  TLSHEngine.py
