[project]
name = "fsalt"
version = "0.1.0"
description = ""
authors = [
    {name = "hirosof",email = "for-git@mail.hirosof.dev"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich (>=15.0.0,<16.0.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "magika (>=1.0.3,<2.0.0)",
    "py-tlsh (>=5.0.0,<6.0.0)",
    "lnkparse3 (>=1.6.0,<2.0.0)",
    "lief (>=0.17.6,<0.18.0)",
    "dotnetfile (>=0.2.10,<0.3.0)",
    "oletools (>=0.60.2,<0.61.0)",
    "typer (>=0.26.7,<0.27.0)",
    "rehashes (>=0.3.0,<0.4.0)"
]

[tool.poetry]
packages = [{include = "fsalt", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "poethepoet (>=0.46.0,<0.47.0)"
]
